Freezing rocket-chip repository

--- a/riscv-tools/Makefile
+++ b/riscv-tools/Makefile
@@ -7,7 +7,7 @@ installs:
 
 checkout-all:
 	git clone https://github.com/ucb-bar/rocket-chip.git
-	cd rocket-chip; git submodule update --init
+	cd rocket-chip; git checkout 48170fd9aa4de6bf2a443010881d25dd55238941; git submodule update --init
 	cd rocket-chip/riscv-tools;     git submodule update --init --recursive	
 
 build-riscv-tools:
